# video-presenter

./: .gitignore  Cargo.toml  README.md  build.rs  todo.md
.github/workflows/: build.yml
lib/: mpv.lib
src/: app.rs  args.rs  cues.rs  main.rs  mp4_bitstream_converter.rs  mp4_converter.rs  time.rs  window.rs
src/misc/: time.rs
