[package]
name = "video-presenter"
description = "A video player built for giving presentations."
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.3.8", features = ["derive"] }
crossbeam = "0.8.2"
indoc = "2.0.1"
libmpv = "2.0.1"
winit = "0.28.6"
winit_input_helper = "0.14.1"
